force-app/main/default/objects/vlocity_ps__CalculationMatrixRow__c/fields/vlocity_ps__HashKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__HashKey__c</fullName>
    <label>Hash Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>