force-app/main/default/objects/vlocity_ps__CalculationMatrixRow__c/fields/vlocity_ps__IsCalculationMatrixVersionEnabled__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsCalculationMatrixVersionEnabled__c</fullName>
    <formula>vlocity_ps__CalculationMatrixVersionId__r.vlocity_ps__IsEnabled__c</formula>
    <label>Version Enabled</label>
    <type>Checkbox</type>
</CustomField>