force-app/main/default/objects/vlocity_ps__CalculationMatrixRow__c/fields/vlocity_ps__OutputData__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OutputData__c</fullName>
    <label>OutputData</label>
    <length>255</length>
    <type>Text</type>
</CustomField>