force-app/main/default/objects/vlocity_ps__CalculationMatrixRow__c/fields/vlocity_ps__OutputDataLong__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__OutputDataLong__c</fullName>
    <label>OutputDataLong</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>